adjusted the page layout

--- a/index.html
+++ b/index.html
@@ -18,16 +18,17 @@
         >Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident at
         quisquam natus veritatis incidunt officiis suscipit enim minima ab quam
         architecto ex, veniam molestiae corporis deserunt eius reprehenderit
-        eveniet. Autem. </strong
-      >adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+        eveniet. Autem.
+      </strong>
+      adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
       magna aliqua.
     </p>
 
     <p>
       Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
       aliquip ex ea commodo consequat.
-      <em
-        >Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos
+      <em>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos
         quibusdam laborum illum inventore assumenda, doloremque sapiente iste
         soluta aperiam quidem, enim voluptatum reprehenderit recusandae totam,
         unde repellat ducimus. Incidunt, ipsa.
