--- a/index.html
+++ b/index.html
@@ -3,36 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Homepage</title>
   </head>
   <body>
-    <h1>This is a heading 1</h1>
-    <h2>This is a heading 2</h2>
-    <h3>This is a heading 3</h3>
-    <h4>This is a heading 4</h4>
-    <h5>This is a heading 5</h5>
-    <h6>This is a heading 6</h6>
-    <p>
-      Lorem ipsum dolor sit amet, consectetur
-      <strong
-        >Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident at
-        quisquam natus veritatis incidunt officiis suscipit enim minima ab quam
-        architecto ex, veniam molestiae corporis deserunt eius reprehenderit
-        eveniet. Autem.
-      </strong>
-      adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-      magna aliqua.
-    </p>
+    <h1>Homepage</h1>
 
-    <p>
-      Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-      aliquip ex ea commodo consequat.
-      <em>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos
-        quibusdam laborum illum inventore assumenda, doloremque sapiente iste
-        soluta aperiam quidem, enim voluptatum reprehenderit recusandae totam,
-        unde repellat ducimus. Incidunt, ipsa.
-      </em>
-    </p>
+    <a href="/pages/about.html">ABOUT PAGE</a>
+
+    <img
+      src="./images/running-chihuahua-dog.webp"
+      alt="running-chihuahua-dog"
+    />
   </body>
 </html>
