--- a/index.html
+++ b/index.html
@@ -14,5 +14,25 @@
       src="./images/running-chihuahua-dog.webp"
       alt="running-chihuahua-dog"
     />
+
+    <h1>
+      This page covers common image formats, but you may also be looking for
+    </h1>
+
+    <h2>JPGs</h2>
+
+    <p>JPG images are good for photos.</p>
+
+    <img src="/images/mochi-77c69d.385ff9c7.jpg" />
+    <h2>GIFs</h2>
+
+    <p>GIFs are good for animations.</p>
+
+    <img src="images/mochi-961ee5.6d9c21cd.gif" />
+    <h2>PNGs</h2>
+
+    <p>PNGs are good for diagrams and icons.</p>
+
+    <img src="images/mochi-f95fdf.849f17a3.png" />
   </body>
 </html>
