--- a/pages/about.html
+++ b/pages/about.html
@@ -8,6 +8,11 @@
   <body>
     <h1>About Page</h1>
     <a href="/index.html">Homepage</a>
-    <img src="https://www.theodinproject.com/mstile-310x310.png" />
+    <img
+      src="https://www.theodinproject.com/mstile-310x310.png"
+      alt="The Odin Project Logo"
+      height="310"
+      width="310"
+    />
   </body>
 </html>
